--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -190,7 +190,7 @@
  */
 
 .md body.dark {
-  --ion-background-color: #121212;
+  --ion-background-color: #000000;
   --ion-background-color-rgb: 18,18,18;
 
   --ion-text-color: #ffffff;
@@ -218,7 +218,7 @@
   --ion-color-step-900: #e7e7e7;
   --ion-color-step-950: #f3f3f3;
 
-  --ion-item-background: #1e1e1e;
+  --ion-item-background: #000000;
 
   --ion-toolbar-background: #000000;
 
